--- a/css/basic.css
+++ b/css/basic.css
@@ -6,15 +6,12 @@
     outline: none;
     vertical-align: baseline;
     font-weight: inherit;
-    font-family: Geometria;
     font-style: inherit;
     font-size: 100%;
     line-height: 150%;
     list-style-type: none;
     text-decoration: none;
     color: #000;
-    text-shadow: 0 -1px 1px hsla(0, 0%, 0%, 0.1);
-    transition: 500ms;
     position: relative;
     box-sizing: border-box;
 }
@@ -44,51 +41,28 @@ a:hover, a:active  {
 /*Переменные*/
 :root {
     /*Типографика*/
+    --f-b: 30px;
+    --f-n: 19.5px;
+    --f-s: 15.5px;
 
+    /*Цвета*/
+    --bg-main: #f2f2f2;
+    --bg-btn: #888888;
+    --bg-blocked: #e1e1e1;
+
+    --c-f-1: #ffffff;
+    --c-f-2: #888888;
 
     /*Сетка*/
     --widthContent: 1100px;
 
-    /*Цвета*/
-
-
     /*Отступы*/
 
-
-    /*Эффекты*/
-    --transitionFast: 100ms;
 }
 
 
 /*Универсальные классы*/
 .container {
-    max-width: var(--widthContent) !important;
     width: 90% !important;
-    margin: 0 auto;
+    margin: 40px auto;
 }
-
-.section_header {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.section_header_head {
-    text-transform: uppercase;
-    font-size: 32px;
-    text-align: center;
-    margin-bottom: 0.8em;
-}
-
-.section_header_p {
-    text-align: center;
-}
-
-input, textarea {
-    border: 1px solid black;
-}
-
-/*Для валидации формы*/
-[required]:invalid:not(:placeholder-shown) {border-color: red;}
-[required]:valid:not(:placeholder-shown) {border-color: green;}
