--- a/css/basic.css
+++ b/css/basic.css
@@ -31,10 +31,6 @@ a, button {
     display: inline-block;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
-}
-
 a:hover, a:active  {
     text-decoration: underline;
 }
@@ -77,6 +73,13 @@ h2 {
     color: var(--c-f-2);
     font-size: var(--f-b);
     line-height: 125%;
+    font-weight: bold;
+}
+
+h3 {
+    color: var(--c-f-2);
+    font-size: var(--f-n);
+    line-height: 150%;
 }
 
 p {
@@ -90,11 +93,11 @@ button {
     font-size: var(--f-n);
     color: var(--c-f-1);
     border-radius: 3px;
+    font-weight: bold;
 }
 
-h2, p, button {
+h2, h3, p, button {
     height: var(--cells-h);
-    font-weight: bold;
 }
 
 /*header*/
@@ -132,6 +135,30 @@ h2, p, button {
     width: 100%;
     height: 3px;
     background-color: var(--c-f-2);
+}
+
+/*main*/
+
+.main {
+    display: grid;
+    grid-gap: var(--g-g);
+    min-height: calc(
+            ( var(--cells-h) * 11 ) +
+            ( var(--g-g) * 10 )
+    );
+    align-content: flex-start;
+}
+
+.main h3,
+.main p,
+.main button {
+    text-indent: 12px;
+}
+
+.main p {
+    background-color: var(--bg-blocked);
+    width: 50%;
+    line-height: 200%;
 }
 
 /*footer*/
