--- a/css/basic.css
+++ b/css/basic.css
@@ -186,6 +186,14 @@ input {
     grid-template-columns: 2fr 2fr 1fr 1fr;
 }
 
+.main_input {
+    width: 50%;
+}
+
+.main-mod_1 {
+    grid-template-columns: 1fr;
+}
+
 /*footer*/
 
 .footer {
