--- a/css/basic.css
+++ b/css/basic.css
@@ -122,15 +122,10 @@ input {
 
 .header_top {
     display: grid;
-    grid-template-areas: "h2 h2 h2 h2 btn-back btn"
-                        "p p p p p p";
+    grid-template-columns: 4fr 1fr 1fr;
+    grid-template-rows: var(--cells-h) var(--cells-h);
     grid-gap: var(--g-g);
 }
-
-.header_top_h2 {grid-area: h2}
-.header_top_button {grid-area: btn}
-.header_top_button-back {grid-area: btn-back}
-.header_top_p {grid-area: p}
 
 .header_nav {
     display: grid;
@@ -198,7 +193,7 @@ input {
 
 }
 
-.main_header, .main_list_item {
+.main_header, .main-mod_2 .main_list_item {
     display: grid;
     grid-gap: var(--g-g);
     grid-template-columns:
@@ -255,8 +250,5 @@ input {
     height: var(--cells-h);
     display: grid;
     grid-gap: var(--g-g);
-    grid-template-areas: "btn-f . . . select select";
+    grid-template-columns: 1fr 3fr 2fr;
 }
-
-.footer_content_button {grid-area: btn-f}
-.footer_content_select {grid-area: select}
