--- a/css/basic.css
+++ b/css/basic.css
@@ -248,6 +248,20 @@ input {
     color: var(--c-f-2);
 }
 
+.main_redactor {
+    grid-template-areas:
+                        "top-left top-center top-right"
+                        "center center right"
+                        "bottom bottom right";
+}
+
+.main_top-left {grid-area: top-left }
+.main_top-center {grid-area: top-center }
+.main_top-right {grid-area: top-right }
+.main_center {grid-area: center }
+.main_right {grid-area: right }
+.main_bottom {grid-area: bottom }
+
 /*footer*/
 
 .footer {
@@ -273,4 +287,8 @@ input {
     display: grid;
     grid-gap: var(--g-g);
     grid-template-columns: 1fr 3fr 2fr;
+}
+
+.redactor .footer_content {
+    grid-template-columns: 1fr 1fr 2fr 2fr;
 }
