--- a/css/basic.css
+++ b/css/basic.css
@@ -63,7 +63,7 @@ a:hover, a:active  {
 
 /*Универсальные классы*/
 .container {
-    width: 90% !important;
+    width: 1024px !important;
     margin: 0 auto;
     background: var(--bg-main);
     display: grid;
@@ -223,9 +223,9 @@ textarea {
     display: grid;
     grid-gap: var(--g-g);
     grid-template-columns:
-                        calc( 100% / 6 )
-                        calc( 4 * 100% / 6 )
-                        calc( 100% / 6 );
+            calc( 100% / 6 )
+            calc( 4 * 100% / 6 )
+            calc( 100% / 6 );
 }
 
 .main_email {
@@ -253,10 +253,11 @@ textarea {
 }
 
 .main_redactor {
+    grid-template-columns: 33.3% 33.3% 33.3% ;
     grid-template-areas:
-                        "top-left top-center top-right"
-                        "center center right"
-                        "bottom bottom right";
+            "top-left top-center top-right"
+            "center center right"
+            "bottom bottom right";
 }
 
 .main_redactor > * {
@@ -272,12 +273,14 @@ textarea {
 .main_bottom {grid-area: bottom }
 
 .main_top-left {
-    /*max-width: calc( 100% / 3 );*/
     display: grid;
+    grid-template-columns:
+            minmax(20px, 1fr)
+            minmax(20px, 1fr);
     grid-template-areas:
-                        "mtl-input mtl-label"
-                        "mtl-textarea mtl-textarea"
-                        "mtl-textarea mtl-textarea";
+            "mtl-input mtl-label"
+            "mtl-textarea mtl-textarea"
+            "mtl-textarea mtl-textarea";
 }
 
 .main_top-left_input {grid-area: mtl-input}
@@ -309,7 +312,35 @@ textarea {
 }
 
 .main_top-center {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns:
+            minmax(20px, 1fr)
+            minmax(20px, 1fr);
+}
+
+.main_top-right {
+    grid-template-columns:
+            minmax(20px, 1fr)
+            minmax(20px, 1fr)
+            minmax(20px, 1fr)
+            minmax(20px, 1fr);
+    grid-template-areas:
+        "mtr-p_1 mtr-p_1 mtr-p_1 mtr-img"
+        "mtr-p_2 mtr-p_2 mtr-p_2 mtr-img"
+        "mtr-input mtr-input mtr-input mtr-input";
+}
+
+.main_top-right_p_1 {grid-area: mtr-p_1}
+.main_top-right_p_2 {grid-area: mtr-p_2}
+.main_top-right_img {grid-area: mtr-img}
+.main_top-right_input {grid-area: mtr-input}
+
+.main_top-right p {
+    width: auto;
+    background: none;
+}
+
+.main_top-right_img {
+    margin: auto;
 }
 
 /*footer*/
