--- a/css/basic.css
+++ b/css/basic.css
@@ -48,6 +48,7 @@ a:hover, a:active  {
     /*Цвета*/
     --bg-main: #f2f2f2;
     --bg-btn: #888888;
+    --bg-btn-login: #6b0008;
     --bg-blocked: #e1e1e1;
 
     --c-f-1: #ffffff;
@@ -581,4 +582,83 @@ textarea {
 
 .redactor .footer_content {
     grid-template-columns: 1fr 1fr 2fr 2fr;
+}
+
+
+/*.login*/
+
+.login {
+    min-height: calc(
+            18 * var(--cells-h) +
+            17 * var(--g-g)
+    );
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: calc(
+        2 * var(--cells-h) +
+        2 * var(--g-g)
+    );
+}
+
+.login_img_container {
+    height: calc(
+        6 * var(--cells-h) +
+        5 * var(--g-g)
+    );
+    width: calc( var(--widthContent) / 3 );
+}
+
+.login_img {
+    width: 100%;
+    height: 100%;
+}
+
+.login_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login_form > * {
+    width: calc( var(--widthContent) / 3 );
+}
+
+.login_span, .login_span_after {
+    width: auto;
+    font-size: var(--f-s) !important;
+    line-height: 210% !important;
+}
+
+.login_button {
+    width: calc( var(--widthContent) / 6 );
+    background-color: var(--bg-btn-login);
+}
+
+.login_input {
+    width: 100%;
+}
+
+.login_label_p {
+    font-weight: bold;
+}
+
+.login span, .login_a {
+    color: var(--c-f-2);
+    font-size: var(--f-s) !important;
+    line-height: 150%;
+    height: var(--cells-h);
+}
+
+.login * {
+    margin: calc( var(--g-g) ) 0 0 0;
+}
+
+.login_span_after {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: calc( var(--cells-h) * -1.5 );
+    display: table;
 }
