Добавлена прокрутка для тех компонентов, в которых она должна быть
Кроме admin/redactor/about.html в котором нужна структурная
перестройка блока, чтобы добавить прокрутку

--- a/css/basic.css
+++ b/css/basic.css
@@ -558,6 +558,22 @@ textarea {
     width: var(--w-check) !important;
 }
 
+.overflow {
+    overflow: auto;
+    max-height: calc(
+        11 * var(--cells-h) +
+        10 * var(--g-g)
+    );
+}
+
+.overflow_small {
+    overflow: auto;
+    max-height: calc(
+        10 * var(--cells-h) +
+        9 * var(--g-g)
+    );
+}
+
 
 /*footer*/
 
