--- a/css/basic.css
+++ b/css/basic.css
@@ -766,6 +766,8 @@ textarea {
 .header_top_p_span-inst,
 .header_top_p-inst,
 .footer_content_select-inst,
-.footer_content_button-inst {
+.footer_content_button-inst,
+.main_buttons-inst,
+.footer_content_button-inst{
     display: none;
 }
